<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.student.RegisterStudentTwoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/FormPertama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ppdb_online" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="Registrasi Murid Baru"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:text="Alamat"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="2/6"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEAlamat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Alamat Lengkap"
                            android:inputType="textMultiLine"
                            android:maxLines="3"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/txt_slct_prov"
                        android:textAllCaps="false"
                        android:textSize="16sp" />
                    
                    <Spinner
                        android:id="@+id/spinProv"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:drawSelectorOnTop="true"
                        android:padding="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/txt_slct_kab"
                        android:textAllCaps="false"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spinKab"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:drawSelectorOnTop="true"
                        android:padding="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/txt_slct_kec"
                        android:textAllCaps="false"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spinKec"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:drawSelectorOnTop="true"
                        android:padding="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/txt_slct_kel"
                        android:textAllCaps="false"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spinKel"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:drawSelectorOnTop="true"
                        android:padding="8dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLKodPos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEKodPos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Kode Pos"
                            android:inputType="number"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_RegisterTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/bt_custom"
                    android:text="Selanjutnya"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>